--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@ body {
     margin: 0;
     padding: 0;
 }
+
+h1 {
+    .italiana-regular {
+        font-family: "Italiana", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }      
+}
