--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-h1 {
+header {
     .italiana-regular {
         font-family: "Italiana", sans-serif;
         font-weight: 400;
