update styles font to italiana

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,11 @@ body {
 h1 {
         font-family: Italiana, sans-serif;
     }    
+
+    nav {
+        font-family: Italiana, sans-serif;
+    }
+    
+    nav a {
+        font-family: Italiana, sans-serif;
+    }    
