--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ nav {
         justify-content: center;
         align-items: center;
         height: 100px;
-        background-color: black;
+        background-color: tan;
     }
     
 nav a {
