--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ nav a {
 
 #about h2 {
     font-family: Ballet, cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
 }
 
 .cormorant-garamond-light {
