change nav to black

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ nav a {
         font-family: Italiana, sans-serif;
         text-decoration: none;
         margin: 0 10px;
+        color: black;
     }    
 
 .ballet {
