--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,9 @@ nav a {
   p {
     font-family: Cormorant Garamond, sans-serif;
 }
+
+.rounded-image {
+    width: 200px;
+    height: auto;
+    border-radius: 10px;
+}
