--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav a {
   font-style: normal;
 }
 
-#about h2 {
+#about-me h2 {
     font-family: Ballet, cursive;
     display: flex;
     justify-content: center;
