--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ nav a {
     justify-content: center;
     align-items: center;
     height: 100px;
+    font-size: 25px;
 }
 
 .cormorant-garamond-light {
