--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ nav a {
 }
 
 nav a[href="resume.pdf"] {
-    background-color: lightcoral;
+    background-color: rgba(240, 128, 128, 0.646);
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
