--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ button[type="submit"] {
         .project-square {
             width: 200px;
             height: 200px;
-            background-color: #007bff; /* Change the background color as needed */
+            background-color: rgba(240, 128, 128, 0.646); /* Change the background color as needed */
             color: white;
             text-align: center;
             line-height: 200px; /* Center the text vertically */
